# extract-load-eo

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  lefthook.yml  otel-collector-config.yaml  pyproject.toml  requirements.txt
.venv-source-github/: pyvenv.cfg
src/: extract_base.py  extract_eo.py  main.py
src/config/: logging_config.py
src/extract/: create_config.py  extract_base.py  extract_ciro.py  extract_cmpo.py  extract_cmpo_software_artifact.py  extract_eo.py
src/github/: github_client.py
src/model/: models.py
src/query/: query.py  query_count.py
src/report/: example.py  team_report.py
src/sink/: sink_neo4j.py
src/source/: github_client.py  models.py
src/test/: test_project.py
